release notes benerator 0.7.0
=============================


summary
-------


changes
-------
- moved default values from Descriptor classes to GeneratorFactory
- removed number min/maxExlusive, replaced with boolean min/maxInclusive
- CSVEntityExporter.quoteEmpty is true by default
- <setup defaultOneToOne="false"> by default
- removed generic parameter from StorageSystem.queryEntityIds() andStorageSystem.query()
- removed predefined "benerator" variable from context (use "context" now)
- removed hexadecimal syntax for decimal number literals in BeneratorScript
- removed property 'db' from SequenceTableGenerator (replaced with property 'database')


enhancements
------------
- supporting different types of GeneratorFactories
- Defined VolumeGeneratorFactory, EquivalenceGeneratorFactory, CoverageGeneratorFactory and SerialGeneratorFactory 
- new annotation @DecimalGranularity
- New Converter class NumberQuantizer
- Added configurable GeneratorFactory to BeneratorContext
- Defined SimpleMethodParamsGenerator as abstract parent class for Generators that create method parameters as Object arrays.
- Defined AsStringGenerator for wrapping an arbitrary Generator and return String representations of products
- CompositeStringGenerator supports uniqueness
- Direct DB Sanity integration by <dbsanity database="..." ... />
- Added TimeUtil.addDays(), addMonths(), addYears(), midnightOf()
- Introduced generatorFactory attribute in <setup>
- Added generic 'offset' feature


bug fixes (Find the bug tracker at http://sourceforge.net/tracker2/?group_id=222964&atid=1057386)
-------------------------------------------------------------------------------------------------
- Bug fix in UniqueCompositeArrayGenerator