@@ -1,5 +1,5 @@
 /*
- * (c) Copyright 2009-2010 by Volker Bergmann. All rights reserved.
+ * (c) Copyright 2009-2011 by Volker Bergmann. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, is permitted under the terms of the
@@ -23,37 +23,59 @@ package org.databene.platform.db;
 
 import static org.junit.Assert.*;
 
+import java.sql.SQLException;
+
 import org.databene.benerator.Generator;
 import org.databene.benerator.test.GeneratorTest;
 import org.databene.jdbacl.hsql.HSQLUtil;
+import org.junit.Before;
 import org.junit.Test;
 
 /**
- * Tests the OfflineSequenceGenerator.<br/><br/>
+ * Tests the {@link DBSequenceGenerator}.<br/><br/>
  * Created: 11.11.2009 18:50:58
  * @since 0.6.0
  * @author Volker Bergmann
  */
-public class OfflinceSequenceGeneratorTest extends GeneratorTest {
+public class DBSequenceGeneratorTest extends GeneratorTest {
 
-	@Test
-	public void testLifeCycle() throws Exception {
-		DBSystem db = new DBSystem("db", 
+	private DBSystem db;
+	private String seq = getClass().getSimpleName();
+	
+	@Before
+	public void setUpDB() throws SQLException {
+		db = new DBSystem("db", 
 				HSQLUtil.IN_MEMORY_URL_PREFIX + "benerator", 
 				HSQLUtil.DRIVER, HSQLUtil.DEFAULT_USER, HSQLUtil.DEFAULT_PASSWORD);
-		String seq = getClass().getSimpleName();
+		// create sequence and read its value
+		db.createSequence(seq);
+	}
+	
+	@Test
+	public void testUncached() throws Exception {
+		check(false);
+	}
+
+	@Test
+	public void testCached() throws Exception {
+		check(true);
+	}
+
+	protected void check(boolean cached) {
+		long first = db.nextSequenceValue(seq);
 		try {
-			// create sequence and read its value
-			db.createSequence(seq);
-			long n = db.nextSequenceValue(seq);
 			// assure that the generated values are like if they stem from the DB sequence
-			Generator<Long> generator = new OfflineSequenceGenerator(db, seq);
+			Generator<Long> generator = new DBSequenceGenerator(seq, db, cached);
 			generator.init(context);
+			long n = first;
 			for (int i = 0; i < 10; i++) {
 				Long product = generator.generate();
 				assertNotNull(product);
 				assertEquals(++n, product.longValue());
 			}
+			// verify that the original sequence value has not been changed if cache is active
+			if (cached)
+				assertEquals(first + 2, db.nextSequenceValue(seq));
 			// assure that after closing the generator, the DB sequence continues as if it had been used itself
 			generator.close();
 			assertEquals(n + 1, db.nextSequenceValue(seq));
@@ -61,5 +83,5 @@ public class OfflinceSequenceGeneratorTest extends GeneratorTest {
 			db.dropSequence(seq);
 		}
 	}
-	
+
 }
